# armnn

./: CMakeLists.txt  build-all.sh  buildSample.sh  build_armnn.sh  draw_bboxes.py
cmake/: GlobalConfig.cmake
include/armnn/: Descriptors.hpp  DescriptorsFwd.hpp  ILayerSupport.hpp  ILayerVisitor.hpp  INetwork.hpp  LayerSupport.hpp  LayerVisitorBase.hpp  Types.hpp
samples/: CMakeLists.txt  CompSample.cpp  SimpleSample.cpp
src/armnn/: DynamicQuantizationVisitor.cpp  DynamicQuantizationVisitor.hpp  InternalTypes.cpp  InternalTypes.hpp  LayerSupport.cpp  LayersFwd.hpp  Network.cpp  Network.hpp  QuantizerVisitor.cpp  QuantizerVisitor.hpp  SerializeLayerParameters.cpp  SerializeLayerParameters.hpp  StaticRangeVisitor.cpp  StaticRangeVisitor.hpp  Tensor.cpp
src/armnn/layers/: ReduceMaxLayer.cpp  ReduceMaxLayer.hpp
src/armnnDeserializer/: Deserializer.cpp  Deserializer.hpp
src/armnnSerializer/: ArmnnSchema.fbs  Serializer.cpp  Serializer.hpp
src/armnnTfLiteParser/: TfLiteParser.cpp  TfLiteParser.hpp
src/armnnTfLiteParser/test/: InputOutputTensorNames.cpp  Squeeze.cpp
src/backends/aclCommon/: ArmComputeTensorUtils.hpp
src/backends/backendsCommon/: LayerSupportBase.cpp  LayerSupportBase.hpp  WorkloadData.cpp  WorkloadData.hpp  WorkloadFactory.cpp  WorkloadFactory.hpp  WorkloadUtils.hpp
src/backends/cl/: ClLayerSupport.cpp  ClLayerSupport.hpp  ClWorkloadFactory.cpp  ClWorkloadFactory.hpp  backend.mk
src/backends/neon/: NeonLayerSupport.cpp  NeonLayerSupport.hpp  NeonWorkloadFactory.cpp  NeonWorkloadFactory.hpp  backend.mk
src/backends/reference/: backend.mk  (+4 more)
(+14 files in other folders)
