if(BUILD_SAMPLE_APP AND ARMNNREF)
    add_executable(SimpleSample SimpleSample.cpp)
    target_link_libraries(SimpleSample armnn armnnTfLiteParser ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(SimpleSample pthread)
    add_executable(CompSample CompSample.cpp)
    target_link_libraries(CompSample armnn armnnTfLiteParser ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(CompSample pthread)
endif()
